syntax = "proto3";

package minikms.v1;

option go_package = "github.com/envsync/minikms/api/proto/minikms/v1;minikmsv1";

// AuditService provides access to hash-chained audit logs.
// Each entry contains entry_hash = SHA256(previous_hash || timestamp || action || actor_id || details).
// Genesis entry uses 64 zero chars as previous_hash.
service AuditService {
    rpc GetAuditLogs(GetAuditLogsRequest) returns (GetAuditLogsResponse);
    rpc VerifyChain(VerifyChainRequest) returns (VerifyChainResponse);
}

message AuditEntry {
    string id = 1;
    string previous_hash = 2;
    string entry_hash = 3;
    string timestamp = 4; // RFC3339Nano
    string action = 5;
    string actor_id = 6;
    string org_id = 7;
    string details = 8;
    string request_jwt_hash = 9; // SHA-256 of JWT used for this request
}

message GetAuditLogsRequest {
    string org_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetAuditLogsResponse {
    repeated AuditEntry entries = 1;
}

message VerifyChainRequest {
    string org_id = 1;
}

message VerifyChainResponse {
    bool valid = 1;
}
