syntax = "proto3";

package minikms.v1;

option go_package = "github.com/envsync/minikms/api/proto/minikms/v1;minikmsv1";

// KMSService provides encrypt/decrypt operations using managed data encryption keys.
// Callers never see root key or plaintext DEKs â€” all operations go through this service.
service KMSService {
    rpc Encrypt(EncryptRequest) returns (EncryptResponse);
    rpc Decrypt(DecryptRequest) returns (DecryptResponse);
    rpc BatchEncrypt(BatchEncryptRequest) returns (BatchEncryptResponse);
    rpc BatchDecrypt(BatchDecryptRequest) returns (BatchDecryptResponse);
    rpc CreateDataKey(CreateDataKeyRequest) returns (CreateDataKeyResponse);
    rpc RotateDataKey(RotateDataKeyRequest) returns (RotateDataKeyResponse);
    rpc ReEncrypt(ReEncryptRequest) returns (ReEncryptResponse);
    rpc GetKeyInfo(GetKeyInfoRequest) returns (GetKeyInfoResponse);
}

message EncryptRequest {
    string tenant_id = 1;  // Tenant identifier (maps to org_id in EnvSync)
    string scope_id = 2;   // Scope/namespace identifier (maps to app_id in EnvSync)
    bytes plaintext = 3;
    string aad = 4; // Additional Authenticated Data for context binding
}

message EncryptResponse {
    string ciphertext = 1; // base64-encoded
    string key_version_id = 2;
}

message DecryptRequest {
    string tenant_id = 1;
    string scope_id = 2;
    string ciphertext = 3; // base64-encoded
    string aad = 4;
    string key_version_id = 5;
}

message DecryptResponse {
    bytes plaintext = 1;
}

message BatchEncryptRequest {
    string tenant_id = 1;
    string scope_id = 2;
    repeated BatchEncryptItem items = 3;
}

message BatchEncryptItem {
    bytes plaintext = 1;
    string aad = 2;
}

message BatchEncryptResponse {
    repeated EncryptResponse items = 1;
}

message BatchDecryptRequest {
    string tenant_id = 1;
    string scope_id = 2;
    repeated BatchDecryptItem items = 3;
}

message BatchDecryptItem {
    string ciphertext = 1;
    string aad = 2;
    string key_version_id = 3;
}

message BatchDecryptResponse {
    repeated DecryptResponse items = 1;
}

message CreateDataKeyRequest {
    string tenant_id = 1;
    string scope_id = 2;
}

message CreateDataKeyResponse {
    string key_version_id = 1;
    int32 version = 2;
}

message RotateDataKeyRequest {
    string tenant_id = 1;
    string scope_id = 2;
}

message RotateDataKeyResponse {
    string new_key_version_id = 1;
}

message ReEncryptRequest {
    string tenant_id = 1;
    string scope_id = 2;
    string ciphertext = 3;
    string source_aad = 4;
    string target_aad = 5;
    string source_key_version_id = 6;
}

message ReEncryptResponse {
    string ciphertext = 1;
    string key_version_id = 2;
}

message GetKeyInfoRequest {
    string tenant_id = 1;
    string scope_id = 2;
}

message GetKeyInfoResponse {
    string key_version_id = 1;
    int32 version = 2;
    int64 encryption_count = 3;
    int64 max_encryptions = 4;
    string status = 5;
}
